--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
   	 "testEnvironment": "jest-environment-node",
   	 "collectCoverageFrom": [
     		"*.js"
-  	  ]
+  	  ],
+/*      "coverageThreshold": {
+        "global": {
+          "statements": 0,
+          "branches": 0,
+          "functions": 0,
+          "lines": 0
+        }*/
+  }
+
   }
 }
